{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 513,
  "lineage": "fc6d8a2f-b71e-6957-5425-f7032b275116",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkInterfaces/NA-dev-web-linuxvm-nic",
            "internal_domain_name_suffix": "eseszafrlkfevn3oicbvdjwm5h.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/publicIPAddresses/NA-dev-linuxvm-publicip",
                "subnet_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-websubnet"
              }
            ],
            "location": "eastus2",
            "name": "NA-dev-web-linuxvm-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "NA-dev-rg"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkInterfaces/NA-dev-web-linuxvm-nic|/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-web-linuxvm-nic-nsg",
            "network_interface_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkInterfaces/NA-dev-web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-web-linuxvm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-appsubnet-nsg",
            "location": "eastus2",
            "name": "NA-dev-vnet-appsubnet-nsg",
            "resource_group_name": "NA-dev-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-bastionsubnet-nsg",
            "location": "eastus2",
            "name": "NA-dev-vnet-bastionsubnet-nsg",
            "resource_group_name": "NA-dev-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-dbsubnet-nsg",
            "location": "eastus2",
            "name": "NA-dev-vnet-dbsubnet-nsg",
            "resource_group_name": "NA-dev-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-websubnet-nsg",
            "location": "eastus2",
            "name": "NA-dev-vnet-websubnet-nsg",
            "resource_group_name": "NA-dev-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-web-linuxvm-nic-nsg",
            "location": "eastus2",
            "name": "NA-dev-web-linuxvm-nic-nsg",
            "resource_group_name": "NA-dev-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "NA-dev-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "NA-dev-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "NA-dev-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "NA-dev-vnet-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "NA-dev-vnet-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "NA-dev-vnet-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "NA-dev-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "NA-dev-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "NA-dev-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "NA-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "NA-dev-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "NA-dev-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "NA-dev-web-linuxvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "NA-dev-web-linuxvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "NA-dev-web-linuxvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "NA-dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/publicIPAddresses/NA-dev-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.114.186.143",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "NA-dev-linuxvm-publicip",
            "resource_group_name": "NA-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-appsubnet",
            "name": "NA-dev-vnet-appsubnet",
            "resource_group_name": "NA-dev-rg",
            "virtual_network_name": "NA-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-bastionsubnet",
            "name": "NA-dev-vnet-bastionsubnet",
            "resource_group_name": "NA-dev-rg",
            "virtual_network_name": "NA-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-dbsubnet",
            "name": "NA-dev-vnet-dbsubnet",
            "resource_group_name": "NA-dev-rg",
            "virtual_network_name": "NA-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-websubnet",
            "name": "NA-dev-vnet-websubnet",
            "resource_group_name": "NA-dev-rg",
            "virtual_network_name": "NA-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg-vnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/networkSecurityGroups/NA-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet/subnets/NA-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg-vnet",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "802c8924-5ab1-4a8a-b7ae-408351a6ccff",
            "id": "/subscriptions/52ef1092-0bdf-4ef0-a7da-0819db8fbaf7/resourceGroups/NA-dev-rg/providers/Microsoft.Network/virtualNetworks/NA-dev-vnet",
            "location": "eastus2",
            "name": "NA-dev-vnet",
            "resource_group_name": "NA-dev-rg",
            "tags": {
              "environment": "dev",
              "owners": "NA"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg-vnet"
          ]
        }
      ]
    }
  ]
}